@@ -130,6 +130,9 @@ UI
 
 * Tidied up some code in customer_mailing.html
 
+* Fixed test to see if sku exists on creation of new item 
+  in quick_question.html (#17)
+
 Standard demo
 -------------
 
